@@ -327,6 +327,8 @@ Release 0.8.0 - unreleased
 
   BUG FIXES
 
+    TAJO-787: FilterPushDownRule::visitSubQuery does not consider aliased columns. (jaehwa)
+
     TAJO-786: TajoDataMetaDatabase::getSchemas creates invalid MetaDataTuple.
     (hyunsik)
 
